# apis_banking_ecosystem

./: README.md
app_data/: .gitignore  pyproject.toml
app_data/migrations/: env.py
app_data/migrations/versions/: e6d0b7ac5a55_create_users_table.py
app_data/src/: app.py  config.py  database.py  logging.ini  routes.py  schemas.py
app_data/tests/: conftest.py  test_app.py  test_db.py
app_webhook/requirements/: base.txt  dev.txt
app_webhook/src/: config.py  main.py  models.py  routes.py  utils.py
app_webhook/tests/: test_1.py
